	  no arguments) or when list was modified.  Affected file
	  silcd/command.c.

	* Remove client from invite list in KILLED notify and in
	  KILL command.  Affected file silcd/command.c and
	  silcd/server.[ch].

	* Fixed bugs in invite list handling in INVITE command.
	  Affected files silcd/command.c and silcd/server_util.c.

	* Merged with Irssi 0.8.6.

Mon Nov 25 18:21:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* The silc_argument_get_[first/next] now return the argument
	  type to caller.  Added silc_argument_payload_encode_one.

	  Affected files are lib/silccore/silcargument.[ch].

	* Added support for the SILC 1.2 INVITE command and new
	  invite lists to server.  Affected files are silcd/command.c,
	  silcd/server_util.[ch] and silcd/packet_[receive/send].[ch].

	* Added support for the SILC 1.2 BAN command and new
	  ban lists to server.  Affected files are silcd/command.c,
	  silcd/server_util.[ch] and silcd/packet_[receive/send].[ch].

	* Added support to client sending new INVITE command.  Affected
	  file is lib/silcclient/command.c.

	* Added support to client sending new BAN command.  Affected
	  file is lib/silcclient/command.c.

	* Added support for removing client from invite list when kicked
	  from channel, as SILC 1.2 dictates.  Affected files are
	  silcd/packet_receive.c and silcd/command.c.

Sun Nov 24 18:26:42 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* If iv argument to silc_cipher_[encrypt/decrypt] is NULL, use
	  automatically the cipher's internal IV.  Affected files
	  lib/silccrypt/silccipher.[ch].

	* Assure the RESUME_CLIENT packet is not sent to twice to
	  backup router if the detached client was originated from
	  the backup.  Affected file silcd/server.c.  Bug #76.

	* Changed silc_sim_symname to not allocate memory.  Affected
	  file lib/silcsim/silcsimutil.c.

	* Fixed memory leaks with SIMs in server.  Affected files
	  silcd/serverconfig.c, silcd/server.c.
