@@ -43,6 +43,7 @@
 #include "textbuffer-reformat.h"
 
 #include <signal.h>
+#include <locale.h>
 
 #ifdef HAVE_STATIC_PERL
 void perl_core_init(void);
@@ -330,6 +331,14 @@ int main(int argc, char **argv)
 	bindtextdomain(PACKAGE, LOCALEDIR);
 	textdomain(PACKAGE);
 #endif
+
+        /* setlocale() must be called at the beginning before any callsthat
+           affect it, especially regexps seem to break if they'regenerated
+           before t his call.
+
+           locales aren't actually used for anything else thanautodetection
+           of UTF-8 currently.. */
+        setlocale(LC_CTYPE, "");
 
 	textui_init();
 	args_register(options);
